force-app/main/default/objects/Log_Records__c/Log_Records__c.object-meta.xml
<CustomObject>
    <label>Log Record</label>
    <nameField>
        <displayFormat>LR-{0}</displayFormat>
        <label>Log Records Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>