force-app/main/default/objects/Log_Records__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <label>Additional Information</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>