force-app/main/default/objects/Log_Records__c/fields/Document_Generation_Log__c.field-meta.xml
<CustomField>
    <fullName>Document_Generation_Log__c</fullName>
    <label>Document Generation Log</label>
    <referenceTo>Document_Generation_Log__c</referenceTo>
    <relationshipLabel>Log Records</relationshipLabel>
    <relationshipName>Log_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>