force-app/main/default/objects/Log_Records__c/fields/Salesforce_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Record_Id__c</fullName>
    <label>Salesforce Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>