force-app/main/default/objects/Log_Records__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiation</fullName>
            </value>
            <value>
                <fullName>OTP Requested</fullName>
            </value>
            <value>
                <fullName>OTP Verified</fullName>
            </value>
            <value>
                <fullName>Document sent for signature</fullName>
            </value>
            <value>
                <fullName>Document signed</fullName>
            </value>
            <value>
                <fullName>Document sent on email</fullName>
            </value>
            <value>
                <fullName>Document completed</fullName>
            </value>
            <value>
                <fullName>Document Linked to Salesforce Record</fullName>
            </value>
            <value>
                <fullName>OTP Verification Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>